Fix issue with threads timelines with few events cropping events (#8392)

--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -70,10 +70,6 @@ limitations under the License.
     overflow-y: auto;
     flex: 1 1 0;
     overflow-anchor: none;
-
-    &[data-scrollbar=false] {
-        overflow-y: hidden;
-    }
 }
 
 .mx_RoomView_messagePanelSearchSpinner {
